<resources>
    <string name="app_name">NofapMainActivity</string>
    <string name="facebook_app_id" translatable="false">749106545985548</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb749106545985548</string>
    <string name="Open" translatable="false">NavBar</string>
    <string name="Close" translatable="false">NavBar</string>
    <string-array name="age">
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
        <item> 47 </item>
        <item> 48 </item>
        <item> 49 </item>
        <item> 50 </item>
        <item> 51 </item>
        <item> 52 </item>
        <item> 53 </item>
    </string-array>
    <string name="reset"> RESET </string>
    <string name="timer"> TIMER </string>
    <string name="start"> START </string>
    <string name="cancel"> CANCEL </string>
    <string name="resettimer"> Reset Timer </string>
    <string name="resettimerconfirmation">Are you sure you want to reset the timer?</string>
    <string name="signout">Sign out </string>
    <string name="generalsettings"> General Settings </string>
    <string name="optionslang"> Language Options </string>
    <string name="supportus"> Support us </string>
    <string name="rateus"> Rate Us </string>
    <string name="feedback"> Feedback </string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="register"> REGISTER </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retypepassword">Re-type Password</string>
    <string name="email">Email</string>
    <string name="agreement">I agree to the Terms of Service</string>
    <string name="signup">SIGN UP</string>
    <string name="alreadymember">Already a member? Login Here</string>
    <string name="myprofile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="sharewithfriends">Share with friends</string>
    <string name="community">Community</string>
    <string name="discordcommunity"> Search your community here </string>
    <string name="todolist"> To do list : </string>
    <string name="todolist1"> To do list </string>
    <string name="todolistexemple"> Task to do (ex : train, play video games, read books, study etc.) </string>
    <string name="addtask"> Add task </string>
    <string name="tasks"> Tasks </string>
    <string name="achievement"> Achievement </string>

    <array name="nofapservername">
        <item>NoFap Brotherhood</item>
        <item>NoPorn</item>
        <item>The NoFap Club</item>
        <item>ꜱʏɴᴅɪᴄᴀᴛᴇ</item>
        <item>No Nut</item>
        <item>Abstinence (Anti-Fap)</item>
        <item>NoFap Community</item>
        <item>Alpha Men</item>
        <item>DON\'T FAPP!</item>
    </array>
    <string name="nofapserverdescription"> this is user description for all items </string>
    <string name="description1"> Welcome to this journey padawan you\'ve come to the right place you will learn a lot and our missions is to help you to fight your addiction and impulses</string>
    <string name="description2"> With meditation, you help yourself to clear your mind and distract about all you think in your mind. It helps you have a control of your impulses and your energy </string>
    <string name="description3"> With training, you push your limits and build your focus which would help you to focus on your everyday tasks </string>
    <string name="description4"> With sleeping, you help your brain to be relaxed and help yourself about fighting the stress </string>
    <string name="heading1"> WELCOME </string>
    <string name="heading2"> MEDITATION </string>
    <string name="heading3"> TRAINING </string>
    <string name="heading4"> SLEEPING </string>
    <string name="prev"> Back </string>
    <string name="next"> Next </string>
    <string name="finish"> Finish </string>
    <string name="day"> Day </string>
    <string name="week"> Week </string>
    <string name="month"> Month </string>
    <string name="year"> Year </string>

</resources>