<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/IconProfileId"
        android:title="@string/myprofile"
        android:icon="@drawable/icon_person"
        >

    </item>

    <item
        android:id="@+id/IconSettingId"
        android:title="@string/settings"
        android:icon="@drawable/icon_settings"
        >
    </item>

    <item
        android:id="@+id/IconTimerId"
        android:title="@string/timer"
        android:icon="@drawable/icon_timer"
        >

    </item>

    <item
        android:id="@+id/IconCommunityId"
        android:title="@string/community"
        android:icon="@drawable/ic_baseline_group_24"
        >

    </item>

    <item
        android:id="@+id/IconToDoListId"
        android:title="@string/todolist1"
        android:icon="@drawable/ic_baseline_task_alt_24"
        >

    </item>

    <item
        android:id="@+id/IconTrophyId"
        android:title="@string/achievement"
        android:icon="@drawable/ic_baseline_trophy_24"
        >

    </item>


</menu>