<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dl"
    tools:context=".ToDoListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lltoDoListId"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/todolist"
            />

        <EditText
            android:id="@+id/editTextToDoListId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todolistexemple"
            android:maxLength="20"
            />

        <TextView
            android:id="@+id/toDoListTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            />
        <Button
            android:id="@+id/ButtonToDoListId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1380px"
            android:text="@string/addtask" />

    </LinearLayout>




    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu"
        >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>